Fixed: removed heavy files and updated quiz management